--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 description = "Tarayıcı yok, reklam yok, dikkat dağıtıcı unsur yok. Sadece siz ve eşsiz bir anime izleme deneyimi."
 readme = "README.md"
 authors = [{ name = "ewgsta", email = "ewgst@proton.me" }]
-license = { text = "CC-BY-NC-ND-4.0" }
+license = "CC-BY-NC-ND-4.0"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -21,6 +21,9 @@ dependencies = [
     "questionary",
     "requests"
 ]
+
+[tool.setuptools]
+packages = ["weeb_cli"]
 
 [project.urls]
 Homepage = "https://github.com/ewgsta/weeb-cli"
