--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,7 +55,7 @@ jobs:
           
       - name: Build with PyInstaller
         run: |
-          pyinstaller --name weeb-cli --onefile weeb_cli/__main__.py --collect-all weeb_cli
+          pyinstaller --name weeb-cli --onefile --clean --noconfirm weeb_cli/__main__.py --collect-all weeb_cli --collect-all rich --collect-all questionary --collect-all typer
         
       - name: Rename Binary (Linux/Mac)
         if: matrix.os != 'windows-latest'
