--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "weeb-cli"
-version = "2.3.2"
+version = "2.4.0"
 description = "Tarayıcı yok, reklam yok, dikkat dağıtıcı unsur yok. Sadece siz ve eşsiz bir anime izleme deneyimi."
 readme = "README.md"
 authors = [{ name = "ewgsta", email = "ewgst@proton.me" }]
@@ -29,6 +29,7 @@ dependencies = [
     "beautifulsoup4",
     "lxml",
     "py7zr",
+    "pypresence",
     "winotify; sys_platform == 'win32'"
 ]
 
